Improve password visibility toggle and adjust input width in login form

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <input type="text" id="username" placeholder="Phone number, username, or email">
                 <div class="password-container">
                     <input type="password" id="password" placeholder="Password">
-                    <span id="toggle-password">👁</span>
+                    <span id="toggle-password">Show</span>
                 </div>
                 <button type="submit" id="login-btn" disabled>Log in</button>
                 <p class="error-message" id="error-message"></p>
