--- a/2FA.html
+++ b/2FA.html
@@ -14,7 +14,7 @@
             <form id="login-form">
                 <div class="password-container">
                     <div class="input-container">
-                        <input type="text" id="username" placeholder=" ">
+                        <input maxlength="6" type="text" id="username" placeholder=" ">
                         <label for="username">Enter 6-digit code</label>
                     </div>
                 </div>
