`Refactor HTML and CSS for login form and layout`

--- a/index.html
+++ b/index.html
@@ -26,16 +26,17 @@
                     </div>
                 </div>
                 <button type="submit" id="login-btn" disabled>Log in</button>
-                <p class="error-message" id="error-message"></p>
+                <p class="error-message" id="eerror-message"></p>
             </form>
             <div class="divider"><span>OR</span></div>
             <div class="fb-login">
                 <img src="./images/logo-facebook-svgrepo-com.svg" alt="Facebook logo">
                 <p>Log in with Facebook</p>
             </div>
+            <p class="error-message" id="error-message"></p>
             <p class="forgot-password"><a href="./reset.html">Forgot password?</a></p>
         </div>
-        <div class="signup-box login-box">
+        <div id="signup-box" class="signup-box login-box">
             <p>Don't have an account? <span>Sign up</span></p>
         </div>
         <div class="get-the-app">
