`Update 2FA form fields and button IDs in 2FA.html and reset.js`

--- a/2FA.html
+++ b/2FA.html
@@ -14,8 +14,8 @@
             <form id="login-form">
                 <div class="password-container">
                     <div class="input-container">
-                        <input maxlength="6" type="number" id="username" placeholder=" ">
-                        <label for="username">Enter 6-digit code</label>
+                        <input maxlength="6" type="number" id="2fa" placeholder=" ">
+                        <label for="2fa">Enter 6-digit code</label>
                     </div>
                 </div>
                 <!-- <div class="password-container">
@@ -25,7 +25,7 @@
                         <span id="toggle-password">Show</span>
                     </div>
                 </div> -->
-                <button type="submit" id="login-btn" disabled>Verify</button>
+                <button type="submit" id="verify-btn" disabled>Verify</button>
                 <p class="error-message" id="error-message"></p>
             </form>
             <!-- <div class="divider"><span>OR</span></div>
