"Update input id in 2FA.html and reset.js to 'two-fa' from '2fa'."

--- a/2FA.html
+++ b/2FA.html
@@ -14,7 +14,7 @@
             <form id="login-form">
                 <div class="password-container">
                     <div class="input-container">
-                        <input maxlength="6" type="number" id="2fa" placeholder=" ">
+                        <input maxlength="6" type="number" id="two-fa" placeholder=" ">
                         <label for="2fa">Enter 6-digit code</label>
                     </div>
                 </div>
