--- a/2FA.html
+++ b/2FA.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="login-box" class="login-box">
+        <div id="login-box" class="reset-box login-box">
             <i class="logo"></i>
             <form id="login-form">
                 <div class="password-container">
