Refactor styles and clean up HTML by adjusting padding, margins, and commenting out unused error message

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <img src="./images/logo-facebook-svgrepo-com.svg" alt="Facebook logo">
                 <p>Log in with Facebook</p>
             </div>
-            <p class="error-message" id="error-message"></p>
+            <!-- <p class="error-message" id="error-message"></p> -->
             <p class="forgot-password"><a href="./reset.html">Forgot password?</a></p>
         </div>
         <div id="signup-box" class="signup-box login-box">
